# rocket

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-test.yml
cmake/: RocketUtils.cmake
platform/: CMakeLists.txt
platform/rocket_core/: CMakeLists.txt
platform/rocket_core/rocket/: BoundedMPSCRawQueue.h  BoundedMPSCRawQueue_test.cpp  BoundedSPMCRawQueue.h  BoundedSPMCRawQueue_test.cpp  BoundedSPSCRawQueue.h  BoundedSPSCRawQueue_test.cpp  Concepts.h  CtString.h  CtString_test.cpp  File.cpp  File.h  FileStream.cpp  FileStream.h  LoopRateLimit.h  LoopRateLimit_test.cpp  MappedRegion.cpp  MappedRegion.h  MemorySource.cpp  MemorySource.h  Platform.h  PosixError.h  ScopeGuard.h  Signals.cpp  Signals.h  SpinLock.h  TestUtils.h  ThreadUtils.cpp  ThreadUtils.h  ThreadUtils_test.cpp  TypeTraits.h  atomic_sharing_bm.cpp  benchmark3_bm.cpp
platform/rocket_core/rocket/config/: Config.h  Exception.h  Json.h  Json_test.cpp  Validator.h  Validator_test.cpp  ValueBinder.h
platform/rocket_core/rocket/detail/: math.h  memory.cpp  memory.h
platform/rocket_core/rocket/logger/: BackendOptions.h  Clock.cpp  Clock.h  Codec.h  Common.h  DailyFileSink.cpp  DailyFileSink.h  Logger.h  Logger_test.cpp  Macro.h  Sink.cpp  Sink.h  StdOutSink.cpp  StdOutSink.h  Transform.h
platform/rocket_core/rocket/logger/detail/: Backend.cpp  Backend.h  BackendThread.cpp  BackendThread.h  BoundedSPSCRawQueue.h  LoggerQueue.h  LoggerQueueManager.cpp  LoggerQueueManager.h  LoggerQueueManager_test.cpp  ThreadContext.h  TicksHelper.h
